@@ -32,6 +32,7 @@ groupname
 GROUPSPEC
 HEAD's
 init
+JGit
 jira
 jirapass
 jiraurl
@@ -50,6 +51,7 @@ OLDCOMMIT
 org
 PACKAGENAME
 PACKAGENAME's
+patchset
 pl
 PLUGINNAME
 plugins
