@@ -2,6 +2,10 @@ Revision history for Git-Hooks. -*- text -*-
 
 {{$NEXT}}
 
+        Implement the new Git::Hooks::SafeRewrite plugin to check the
+        safety of rewrites, by detecting when we're amending or
+        rebasing commits that have already been pushed.
+
 0.033     2013-01-12 18:45:07 America/Sao_Paulo
 
         Substitute Git for App::gh::Git as a parent for Git::More. The
